Don't rely on the "EFI System Partition" label, as it may have been renamed to something else. We now parse the partition tables by ourselves while looking for the esp + boot flags. All matches are considered as boot loader partition candidates.
Note that we don't use GNU Parted here; its --print interface not only
prints partition flags but also meta-data that can span several lines
and confuse our simplistic Installer.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,10 @@
-all: lang tail
+CC       = gcc
+MYCFLAGS = -O3 -Wall
+
+all: lang tail partinfo
+
+partinfo: partinfo.c
+	$(CC) $(MYCFLAGS) $^ -o $@ -lparted
 
 tail:
 	pyuic4 GraphicalTailForm.ui > GraphicalTailForm.py
