Move partinfo to ConfigTools.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,4 @@
-CC       = gcc
-MYCFLAGS = -O3 -Wall
-
-all: lang tail partinfo
-
-partinfo: partinfo.c
-	$(CC) $(MYCFLAGS) $^ -o $@ -lparted
+all: lang tail
 
 tail:
 	pyuic4 GraphicalTailForm.ui > GraphicalTailForm.py
